--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.5",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
